--- a/MVC201612/Views/Module02/Edit.cshtml
+++ b/MVC201612/Views/Module02/Edit.cshtml
@@ -12,6 +12,9 @@
     <title>Edit</title>
 </head>
 <body>
+
+    <h1>Test @MVC201612.Models.Resource.Views.Module02.edit.country</h1>
+
     @using (Html.BeginForm())
     {
         @Html.AntiForgeryToken()
